changed menu order + fixed home manga covers to be consistent with recently added

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -30,3 +30,12 @@
   display: flex;
   flex-direction: column;
 }
+
+.manga-card-container {
+  width: 100%; /* Ensure the container takes full width */
+}
+
+.manga-card img {
+  width: 100%; /* Ensure the image takes full width of the card */
+  height: auto; /* Maintain aspect ratio */
+}
